--- a/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
+++ b/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
@@ -122,7 +122,7 @@
                                                 <i class="fas fa-file-pdf"></i>
                                             </h:commandLink>&nbsp;&nbsp;
                                             <h:commandLink class="card-category btn btn-primary btn-flat m-b-30 m-t-30" action="#" 
-                                                           a:data-toggle="modal" a:data-target="#modalCSV" value="Carga CSV">
+                                                           a:data-toggle="modal" a:data-target="#modalCSV" value="#{administrador_inventario.lbl_cargar_csv}">
                                                 <f:ajax render=":modalCSVContent"/>
                                                 <i class="fas fa-upload"></i>
                                             </h:commandLink>&nbsp;&nbsp;
@@ -138,10 +138,10 @@
                                         <h:form prependId="false">
                                             <h:dataTable class="table table-striped text-center" value="#{inventarioController.materialList}" var="m">
                                                 <h:column><f:facet name="header">#{administrador_inventario.lbl_id}</f:facet>#{m.id}</h:column>
-                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_tipo_material}</f:facet>#{m.tipoMaterial}</h:column>                                                
-                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_cantidad}</f:facet>#{m.cantidad}</h:column>                                                
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_type_material_1}</f:facet>#{m.tipoMaterial}</h:column>                                                
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_cantidad_1}</f:facet>#{m.cantidad}</h:column>                                                
                                                 <h:column><f:facet name="header">#{administrador_eventos.lbl_estado}</f:facet>#{m.estado}</h:column>                                                 
-                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_disponibilidad}</f:facet>#{m.disponilidad.estado}</h:column>                                                 
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_availability_1}</f:facet>#{m.disponilidad.estado}</h:column>                                                 
                                                 <h:column><f:facet name="header">#{administrador_eventos.lbl_options}</f:facet>
                                                     <h:commandLink class="td-actions text-right btn btn-success" actionListener="#{inventarioController.materialSeleccionado(m)}"
                                                                    a:data-toggle="modal" a:data-target="#modalEditarMaterial" rel="tooltip" >
