--- a/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
+++ b/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
@@ -118,7 +118,7 @@
                                             <p class="card-category">#{administrador_inventario.lbl_aqui_encontras}</p>
                                         </div>
                                         <div class="col-6">
-                                            <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#{reportesController.export()}" value="PDF">
+                                            <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#{inventarioController.export()}" value="PDF">
                                                 <i class="fas fa-file-pdf"></i>
                                             </h:commandLink>&nbsp;&nbsp;
                                             <h:commandLink class="card-category btn btn-primary btn-flat m-b-30 m-t-30" action="#" 
